--- a/angular/Jenkinsfile
+++ b/angular/Jenkinsfile
@@ -1,30 +1,62 @@
-node {
-    def app
+pipeline {
+    agent any
 
-    stage('Clone repository') {
-      
-
-        checkout scm
+    environment {
+        // Set environment variables if needed
+        NODEJS_HOME = '/usr/local/bin/node'
+        PATH = "${NODEJS_HOME}/bin:${PATH}"
     }
 
-    stage('Build image') {
-  
-       app = docker.build("johnsonjo100/angular")
-    }
+    stages {
+        stage('Checkout') {
+            steps {
+                // Checkout the source code from your version control system (e.g., Git)
+                checkout scm
+            }
+        }
 
-    stage('Test image') {
-  
+        stage('Install Dependencies') {
+            steps {
+                // Install Node.js and npm
+                script {
+                    sh 'curl -sL https://deb.nodesource.com/setup_14.x | bash -'
+                    sh 'apt-get install -y nodejs'
+                }
 
-        app.inside {
-            sh 'echo "Tests passed"'
+                // Install Angular CLI and project dependencies
+                sh 'npm install'
+            }
+        }
+
+        stage('Build') {
+            steps {
+                // Build the Angular application
+                sh 'npm run build'
+            }
+        }
+
+        stage('Test') {
+            steps {
+                // Run tests if applicable
+                sh 'npm test'
+            }
+        }
+
+        stage('Deploy') {
+            steps {
+                // Deploy your Angular application (e.g., copy files to a web server)
+                // You may need additional steps based on your deployment strategy
+            }
         }
     }
 
-    stage('Push image') {
-        
-        docker.withRegistry('https://registry.hub.docker.com', 'git') {
-            app.push("${env.BUILD_NUMBER}")
-            app.push("latest")
+    post {
+        success {
+            // Add post-build actions if needed
+        }
+        failure {
+            // Add actions to be executed if the build fails
         }
     }
 }
+
